--- a/test/vcr_cassettes/search_journal_search_not_logged_in.yml
+++ b/test/vcr_cassettes/search_journal_search_not_logged_in.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
+    uri: http://solr.library.edu/select?wt=ruby
     body:
       encoding: US-ASCII
-      string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORK&fl=%2A+score&qf=title_text%5E1.0&defType=dismax&bq=title_exact_sm%3ANEW%5C+YORK%5E10.0&start=0&rows=20
+      string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORK&fl=%2A+score&qf=title_text%5E1.0&defType=edismax&bq=title_exact_sm%3ANEW%5C+YORK%5E10.0&start=0&rows=20
     headers:
       Content-Type:
       - application/x-www-form-urlencoded; charset=UTF-8
@@ -21,55 +21,56 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Mon, 09 Sep 2013 20:25:55 GMT
+      - Mon, 30 Jun 2014 19:40:18 GMT
       Connection:
       - close
     body:
       encoding: US-ASCII
-      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>1,''params''=>{''sort''=>''score
-        desc, title_sort_s asc'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''defType''=>''dismax'',''rows''=>''20'',''fl''=>''*
-        score'',''bq''=>''title_exact_sm:NEW\\ YORK^10.0'',''start''=>''0'',''q''=>''NEW
-        YORK'',''fq''=>''type:Sfx4\\:\\:Local\\:\\:AzTitle''}},''response''=>{''numFound''=>483,''start''=>0,''maxScore''=>12.623564,''docs''=>[{''id''=>''Sfx4::Local::AzTitle
-        65770'',''object_id_ss''=>''110975413975942'',''title_display_ss''=>''New
-        York'',''issn_ss''=>''0028-7369'',''isbn_ss''=>'''',''lccn_ss''=>''76012785'',''score''=>12.623564},{''id''=>''Sfx4::Local::AzTitle
-        123302'',''object_id_ss''=>''110978979592881'',''title_display_ss''=>''The
-        New York observer'',''issn_ss''=>''1052-2948'',''isbn_ss''=>'''',''lccn_ss''=>''sn88099997'',''score''=>0.3359118},{''id''=>''Sfx4::Local::AzTitle
-        40840'',''object_id_ss''=>''991042728207580'',''title_display_ss''=>''The
-        New York sun'',''issn_ss''=>''1542-5762'',''isbn_ss''=>'''',''lccn_ss''=>''2002213068'',''score''=>0.3359118},{''id''=>''Sfx4::Local::AzTitle
-        111359'',''object_id_ss''=>''1000000000549074'',''title_display_ss''=>''New
-        York Post, The'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.3252452},{''id''=>''Sfx4::Local::AzTitle
-        104160'',''object_id_ss''=>''110978977285242'',''title_display_ss''=>''Western
-        New York'',''issn_ss''=>''0149-5070'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.3252452},{''id''=>''Sfx4::Local::AzTitle
-        62527'',''object_id_ss''=>''2670000000038116'',''title_display_ss''=>''AM
-        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        101102'',''object_id_ss''=>''1000000000577677'',''title_display_ss''=>''Banking
-        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        68095'',''object_id_ss''=>''1000000000292575'',''title_display_ss''=>''New
-        York American'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        5491'',''object_id_ss''=>''1000000000575857'',''title_display_ss''=>''New
-        York Beacon'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        64789'',''object_id_ss''=>''2550000000094245'',''title_display_ss''=>''The
-        New York Bee'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        27575'',''object_id_ss''=>''1000000000388175'',''title_display_ss''=>''New
-        York Blade'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        4600'',''object_id_ss''=>''2490000000004227'',''title_display_ss''=>''New
-        York Business'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        10410'',''object_id_ss''=>''2550000000094246'',''title_display_ss''=>''The
-        New York Cabinet'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        112612'',''object_id_ss''=>''1000000000292977'',''title_display_ss''=>''New-York
-        Chronicle'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        63236'',''object_id_ss''=>''111093398817000'',''title_display_ss''=>''New
-        York Construction'',''issn_ss''=>''1547-545X'',''isbn_ss''=>'''',''lccn_ss''=>''2003215119'',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        22616'',''object_id_ss''=>''111038323492012'',''title_display_ss''=>''New
-        York Diamonds'',''issn_ss''=>''1538-7402'',''isbn_ss''=>'''',''lccn_ss''=>''2001214764'',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        68520'',''object_id_ss''=>''2550000000094250'',''title_display_ss''=>''The
-        New York Dissector'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        131824'',''object_id_ss''=>''2550000000094251'',''title_display_ss''=>''The
-        New York Ecclesiologist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        55991'',''object_id_ss''=>''1000000000236762'',''title_display_ss''=>''New
-        York Evangelist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Local::AzTitle
-        9903'',''object_id_ss''=>''1000000000236990'',''title_display_ss''=>''New
-        York Farmer'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394}]}}'
+      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>1,''params''=>{''bq''=>''title_exact_sm:NEW\\
+        YORK^10.0'',''fl''=>''* score'',''sort''=>''score desc, title_sort_s asc'',''start''=>''0'',''q''=>''NEW
+        YORK'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''fq''=>''type:Sfx4\\:\\:Local\\:\\:AzTitle'',''rows''=>''20'',''defType''=>''edismax''}},''response''=>{''numFound''=>71,''start''=>0,''maxScore''=>0.351483,''docs''=>[{''id''=>''Sfx4::Local::AzTitle
+        6080'',''object_id_ss''=>''1000000000575857'',''title_display_ss''=>''New
+        York Beacon'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        5091'',''object_id_ss''=>''2490000000004227'',''title_display_ss''=>''New
+        York Business'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        11537'',''object_id_ss''=>''2550000000094246'',''title_display_ss''=>''The
+        New York Cabinet'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        10958'',''object_id_ss''=>''1000000000236990'',''title_display_ss''=>''New
+        York Farmer'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        5700'',''object_id_ss''=>''2550000000093226'',''title_display_ss''=>''New
+        York Fireman'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        3953'',''object_id_ss''=>''1000000000293496'',''title_display_ss''=>''New-York
+        Journal'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        4833'',''object_id_ss''=>''2550000000094261'',''title_display_ss''=>''The
+        New York Organ'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        10426'',''object_id_ss''=>''991042749838974'',''title_display_ss''=>''New
+        York press'',''issn_ss''=>''1538-1412'',''isbn_ss''=>'''',''lccn_ss''=>''sn91065015'',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        13318'',''object_id_ss''=>''954921394032'',''title_display_ss''=>''World;
+        New York'',''issn_ss''=>''0512-2295'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Local::AzTitle
+        11882'',''object_id_ss''=>''991042732711180'',''title_display_ss''=>''New
+        York folklore newsletter'',''issn_ss''=>''1097-3281'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.33138132},{''id''=>''Sfx4::Local::AzTitle
+        12302'',''object_id_ss''=>''110978978382023'',''title_display_ss''=>''New
+        York spectator (New York, N.Y. : 1982)'',''issn_ss''=>''0737-5379'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.30439317},{''id''=>''Sfx4::Local::AzTitle
+        10518'',''object_id_ss''=>''1000000000292914'',''title_display_ss''=>''Independent
+        New-York Gazette'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        18292'',''object_id_ss''=>''991042746955292'',''title_display_ss''=>''New
+        York edition newsday'',''issn_ss''=>''0889-793X'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        12548'',''object_id_ss''=>''2550000000094252'',''title_display_ss''=>''The
+        New York Horticultural Review'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        12570'',''object_id_ss''=>''3330000000000288'',''title_display_ss''=>''New
+        York Law Review'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        5465'',''object_id_ss''=>''1000000000237692'',''title_display_ss''=>''The
+        New York Medical Magazine'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        14974'',''object_id_ss''=>''1000000000238044'',''title_display_ss''=>''The
+        New - York Monthly Magazine'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        3408'',''object_id_ss''=>''2550000000094260'',''title_display_ss''=>''The
+        New York National Reformer'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        4165'',''object_id_ss''=>''2550000000094263'',''title_display_ss''=>''The
+        New York Quarterly Review'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.29290247},{''id''=>''Sfx4::Local::AzTitle
+        13721'',''object_id_ss''=>''991042748335462'',''title_display_ss''=>''New
+        York truck exchange'',''issn_ss''=>''1049-0612'',''isbn_ss''=>'''',''lccn_ss''=>''sn90002744'',''score''=>0.29290247}]}}
+
+'
     http_version: 
-  recorded_at: Mon, 09 Sep 2013 20:25:56 GMT
-recorded_with: VCR 2.4.0
+  recorded_at: Mon, 30 Jun 2014 19:40:19 GMT
+recorded_with: VCR 2.9.2
