--- a/test/vcr_cassettes/search_journal_search_not_logged_in_NS.yml
+++ b/test/vcr_cassettes/search_journal_search_not_logged_in_NS.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
+    uri: http://solr.library.edu/select?wt=ruby
     body:
       encoding: US-ASCII
-      string: fq=type%3ASfx4%5C%3A%5C%3ANs%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORK&fl=%2A+score&qf=title_text%5E1.0&defType=dismax&bq=title_exact_sm%3ANEW%5C+YORK%5E10.0&start=0&rows=20
+      string: fq=type%3ASfx4%5C%3A%5C%3ANs%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORK&fl=%2A+score&qf=title_text%5E1.0&defType=edismax&bq=title_exact_sm%3ANEW%5C+YORK%5E10.0&start=0&rows=20
     headers:
       Content-Type:
       - application/x-www-form-urlencoded; charset=UTF-8
@@ -21,55 +21,56 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Mon, 09 Sep 2013 20:25:56 GMT
+      - Mon, 30 Jun 2014 19:40:19 GMT
       Connection:
       - close
     body:
       encoding: US-ASCII
-      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>0,''params''=>{''sort''=>''score
-        desc, title_sort_s asc'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''defType''=>''dismax'',''rows''=>''20'',''fl''=>''*
-        score'',''bq''=>''title_exact_sm:NEW\\ YORK^10.0'',''start''=>''0'',''q''=>''NEW
-        YORK'',''fq''=>''type:Sfx4\\:\\:Ns\\:\\:AzTitle''}},''response''=>{''numFound''=>422,''start''=>0,''maxScore''=>12.623564,''docs''=>[{''id''=>''Sfx4::Ns::AzTitle
-        89104'',''object_id_ss''=>''110975413975942'',''title_display_ss''=>''New
-        York'',''issn_ss''=>''0028-7369'',''isbn_ss''=>'''',''lccn_ss''=>''76012785'',''score''=>12.623564},{''id''=>''Sfx4::Ns::AzTitle
-        77763'',''object_id_ss''=>''110978979592881'',''title_display_ss''=>''The
-        New York observer'',''issn_ss''=>''1052-2948'',''isbn_ss''=>'''',''lccn_ss''=>''sn88099997'',''score''=>0.3359118},{''id''=>''Sfx4::Ns::AzTitle
-        55402'',''object_id_ss''=>''991042728207580'',''title_display_ss''=>''The
-        New York sun'',''issn_ss''=>''1542-5762'',''isbn_ss''=>'''',''lccn_ss''=>''2002213068'',''score''=>0.3359118},{''id''=>''Sfx4::Ns::AzTitle
-        61674'',''object_id_ss''=>''1000000000549074'',''title_display_ss''=>''New
-        York Post, The'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.3252452},{''id''=>''Sfx4::Ns::AzTitle
-        51738'',''object_id_ss''=>''110978977285242'',''title_display_ss''=>''Western
-        New York'',''issn_ss''=>''0149-5070'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.3252452},{''id''=>''Sfx4::Ns::AzTitle
-        84597'',''object_id_ss''=>''2670000000038116'',''title_display_ss''=>''AM
-        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        47635'',''object_id_ss''=>''1000000000577677'',''title_display_ss''=>''Banking
-        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        7646'',''object_id_ss''=>''1000000000575857'',''title_display_ss''=>''New
-        York Beacon'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        87716'',''object_id_ss''=>''2550000000094245'',''title_display_ss''=>''The
-        New York Bee'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        37460'',''object_id_ss''=>''1000000000388175'',''title_display_ss''=>''New
-        York Blade'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        6425'',''object_id_ss''=>''2490000000004227'',''title_display_ss''=>''New
-        York Business'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        14295'',''object_id_ss''=>''2550000000094246'',''title_display_ss''=>''The
-        New York Cabinet'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        47295'',''object_id_ss''=>''3170000000048917'',''title_display_ss''=>''New
-        York Clipper'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        30769'',''object_id_ss''=>''111038323492012'',''title_display_ss''=>''New
-        York Diamonds'',''issn_ss''=>''1538-7402'',''isbn_ss''=>'''',''lccn_ss''=>''2001214764'',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        3300'',''object_id_ss''=>''2550000000094250'',''title_display_ss''=>''The
-        New York Dissector'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        89182'',''object_id_ss''=>''2550000000094251'',''title_display_ss''=>''The
-        New York Ecclesiologist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        75783'',''object_id_ss''=>''1000000000236762'',''title_display_ss''=>''New
-        York Evangelist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        13615'',''object_id_ss''=>''1000000000236990'',''title_display_ss''=>''New
-        York Farmer'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        43888'',''object_id_ss''=>''3170000000048920'',''title_display_ss''=>''New
-        York Figaro'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394},{''id''=>''Sfx4::Ns::AzTitle
-        7188'',''object_id_ss''=>''2550000000093226'',''title_display_ss''=>''New
-        York Fireman'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.31867394}]}}'
+      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>0,''params''=>{''bq''=>''title_exact_sm:NEW\\
+        YORK^10.0'',''fl''=>''* score'',''sort''=>''score desc, title_sort_s asc'',''start''=>''0'',''q''=>''NEW
+        YORK'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''fq''=>''type:Sfx4\\:\\:Ns\\:\\:AzTitle'',''rows''=>''20'',''defType''=>''edismax''}},''response''=>{''numFound''=>432,''start''=>0,''maxScore''=>11.926846,''docs''=>[{''id''=>''Sfx4::Ns::AzTitle
+        94525'',''object_id_ss''=>''110975413975942'',''title_display_ss''=>''New
+        York'',''issn_ss''=>''0028-7369'',''isbn_ss''=>'''',''lccn_ss''=>''76012785'',''score''=>11.926846},{''id''=>''Sfx4::Ns::AzTitle
+        56075'',''object_id_ss''=>''954921339106'',''title_display_ss''=>''Chemical
+        engineering'',''issn_ss''=>''0009-2460'',''isbn_ss''=>'''',''lccn_ss''=>''11012192'',''score''=>11.882449},{''id''=>''Sfx4::Ns::AzTitle
+        5511'',''object_id_ss''=>''954922644005'',''title_display_ss''=>''Annals of
+        physics'',''issn_ss''=>''0003-4916'',''isbn_ss''=>'''',''lccn_ss''=>''58002769'',''score''=>11.800496},{''id''=>''Sfx4::Ns::AzTitle
+        54936'',''object_id_ss''=>''110978977285242'',''title_display_ss''=>''Western
+        New York'',''issn_ss''=>''0149-5070'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.35873076},{''id''=>''Sfx4::Ns::AzTitle
+        89769'',''object_id_ss''=>''2670000000038116'',''title_display_ss''=>''AM
+        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        50534'',''object_id_ss''=>''1000000000577677'',''title_display_ss''=>''Banking
+        New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        8084'',''object_id_ss''=>''1000000000575857'',''title_display_ss''=>''New
+        York Beacon'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        93058'',''object_id_ss''=>''2550000000094245'',''title_display_ss''=>''The
+        New York Bee'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        39760'',''object_id_ss''=>''1000000000388175'',''title_display_ss''=>''New
+        York Blade'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        6799'',''object_id_ss''=>''2490000000004227'',''title_display_ss''=>''New
+        York Business'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        15195'',''object_id_ss''=>''2550000000094246'',''title_display_ss''=>''The
+        New York Cabinet'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        50163'',''object_id_ss''=>''3170000000048917'',''title_display_ss''=>''New
+        York Clipper'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        32620'',''object_id_ss''=>''111038323492012'',''title_display_ss''=>''New
+        York Diamonds'',''issn_ss''=>''1538-7402'',''isbn_ss''=>'''',''lccn_ss''=>''2001214764'',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        3515'',''object_id_ss''=>''2550000000094250'',''title_display_ss''=>''The
+        New York Dissector'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        94609'',''object_id_ss''=>''2550000000094251'',''title_display_ss''=>''The
+        New York Ecclesiologist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        80469'',''object_id_ss''=>''1000000000236762'',''title_display_ss''=>''New
+        York Evangelist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        14448'',''object_id_ss''=>''1000000000236990'',''title_display_ss''=>''New
+        York Farmer'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        46569'',''object_id_ss''=>''3170000000048920'',''title_display_ss''=>''New
+        York Figaro'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        7594'',''object_id_ss''=>''2550000000093226'',''title_display_ss''=>''New
+        York Fireman'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483},{''id''=>''Sfx4::Ns::AzTitle
+        67613'',''object_id_ss''=>''1000000000292680'',''title_display_ss''=>''New
+        York Herald'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.351483}]}}
+
+'
     http_version: 
-  recorded_at: Mon, 09 Sep 2013 20:25:56 GMT
-recorded_with: VCR 2.4.0
+  recorded_at: Mon, 30 Jun 2014 19:40:20 GMT
+recorded_with: VCR 2.9.2
