--- a/test/vcr_cassettes/sfx4solr_title_contains_search.yml
+++ b/test/vcr_cassettes/sfx4solr_title_contains_search.yml
@@ -1,32 +1,75 @@
---- 
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: post
-    uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
-    body: 
+    uri: http://solr.library.edu/select?wt=ruby
+    body:
       encoding: US-ASCII
-      string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=ECONOMIST&fl=%2A+score&qf=title_text%5E1.0&defType=dismax&bq=title_exact_sm%3AECONOMIST%5E10.0&start=0&rows=20
-    headers: 
-      Content-Type: 
+      string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=ECONOMIST&fl=%2A+score&qf=title_text%5E1.0&defType=edismax&bq=title_exact_sm%3AECONOMIST%5E10.0&start=0&rows=20
+    headers:
+      Content-Type:
       - application/x-www-form-urlencoded; charset=UTF-8
-  response: 
-    status: 
+  response:
+    status:
       code: 200
       message: OK
-    headers: 
-      Server: 
+    headers:
+      Server:
       - Apache-Coyote/1.1
-      Content-Type: 
+      Content-Type:
       - text/plain;charset=UTF-8
-      Transfer-Encoding: 
+      Transfer-Encoding:
       - chunked
-      Date: 
-      - Fri, 06 Sep 2013 17:25:32 GMT
-      Connection: 
+      Date:
+      - Mon, 30 Jun 2014 19:51:37 GMT
+      Connection:
       - close
-    body: 
-      encoding: ASCII-8BIT
-      string: "{'responseHeader'=>{'status'=>0,'QTime'=>0,'params'=>{'sort'=>'score desc, title_sort_s asc','qf'=>'title_text^1.0','wt'=>'ruby','defType'=>'dismax','rows'=>'20','fl'=>'* score','bq'=>'title_exact_sm:ECONOMIST^10.0','start'=>'0','q'=>'ECONOMIST','fq'=>'type:Sfx4\\\\:\\\\:Local\\\\:\\\\:AzTitle'}},'response'=>{'numFound'=>159,'start'=>0,'maxScore'=>11.769257,'docs'=>[{'id'=>'Sfx4::Local::AzTitle 75382','object_id_ss'=>'2550000000042394','title_display_ss'=>'The Economist: Blogs','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>11.769257},{'id'=>'Sfx4::Local::AzTitle 27104','object_id_ss'=>'954921341152','title_display_ss'=>'De Economist','issn_ss'=>'0013-063X','isbn_ss'=>'','lccn_ss'=>'2004233204','score'=>11.74996},{'id'=>'Sfx4::Local::AzTitle 80425','object_id_ss'=>'954921341151','title_display_ss'=>'The Economist','issn_ss'=>'0013-0613','isbn_ss'=>'','lccn_ss'=>'08017464','score'=>11.74996},{'id'=>'Sfx4::Local::AzTitle 96122','object_id_ss'=>'1000000000698425','title_display_ss'=>'Economist (Russia,','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>11.731127},{'id'=>'Sfx4::Local::AzTitle 104683','object_id_ss'=>'110978979434950','title_display_ss'=>'\xE7\xBB\x8F\xE6\xB5\x8E\xE5\xAD\xA6\xE5\xAE\xB6','issn_ss'=>'1003-5656','isbn_ss'=>'','lccn_ss'=>'','score'=>11.522297},{'id'=>'Sfx4::Local::AzTitle 29598','object_id_ss'=>'110978977559547','title_display_ss'=>'The AEI economist','issn_ss'=>'0149-9785','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 23972','object_id_ss'=>'110976725599616','title_display_ss'=>'Building economist','issn_ss'=>'0007-3431','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 118030','object_id_ss'=>'3360000000001129','title_display_ss'=>'Farm Economist','issn_ss'=>'0014-7931','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 27596','object_id_ss'=>'3310000000006232','title_display_ss'=>'Healthcare Economist','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 90690','object_id_ss'=>'2550000000029744','title_display_ss'=>'The home economist','issn_ss'=>'2160-004X','isbn_ss'=>'','lccn_ss'=>'sf85007030','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 21549','object_id_ss'=>'1000000000528016','title_display_ss'=>'Home Economist, The','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 68155','object_id_ss'=>'110978976777393','title_display_ss'=>'Israel economist','issn_ss'=>'0021-2040','isbn_ss'=>'','lccn_ss'=>'52036499','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 73873','object_id_ss'=>'1000000000222445','title_display_ss'=>'Regional Economist','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 77502','object_id_ss'=>'1000000000280459','title_display_ss'=>'The Regional economist','issn_ss'=>'1932-4707','isbn_ss'=>'','lccn_ss'=>'2001234477','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 47291','object_id_ss'=>'1000000000237584','title_display_ss'=>'The Social Economist','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 128200','object_id_ss'=>'3310000000008262','title_display_ss'=>'Zambian Economist','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.3654811},{'id'=>'Sfx4::Local::AzTitle 7889','object_id_ss'=>'991042737734594','title_display_ss'=>'Economist & sun','issn_ss'=>'0845-7778','isbn_ss'=>'','lccn_ss'=>'','score'=>0.33571583},{'id'=>'Sfx4::Local::AzTitle 124309','object_id_ss'=>'3360000000000891','title_display_ss'=>'The Inspired Economist','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.33571583},{'id'=>'Sfx4::Local::AzTitle 131598','object_id_ss'=>'954921381806','title_display_ss'=>'Energy economist','issn_ss'=>'0262-7108','isbn_ss'=>'','lccn_ss'=>'','score'=>0.2797632},{'id'=>'Sfx4::Local::AzTitle 116721','object_id_ss'=>'110978977559117','title_display_ss'=>'Lloyd\\'s shipping economist','issn_ss'=>'0144-6673','isbn_ss'=>'','lccn_ss'=>'sn84010744','score'=>0.2797632}]}}"
+    body:
+      encoding: US-ASCII
+      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>1,''params''=>{''bq''=>''title_exact_sm:ECONOMIST^10.0'',''fl''=>''*
+        score'',''sort''=>''score desc, title_sort_s asc'',''start''=>''0'',''q''=>''ECONOMIST'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''fq''=>''type:Sfx4\\:\\:Local\\:\\:AzTitle'',''rows''=>''20'',''defType''=>''edismax''}},''response''=>{''numFound''=>21,''start''=>0,''maxScore''=>0.33468956,''docs''=>[{''id''=>''Sfx4::Local::AzTitle
+        8746'',''object_id_ss''=>''991042737734594'',''title_display_ss''=>''Economist
+        & sun'',''issn_ss''=>''0845-7778'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.33468956},{''id''=>''Sfx4::Local::AzTitle
+        7998'',''object_id_ss''=>''2550000000092777'',''title_display_ss''=>''Evan\''s
+        Rural Economist'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.27327287},{''id''=>''Sfx4::Local::AzTitle
+        14490'',''object_id_ss''=>''991042735560836'',''title_display_ss''=>''Markham
+        economist & sun'',''issn_ss''=>''1490-3555'',''isbn_ss''=>'''',''lccn_ss''=>''cn2001300098'',''score''=>0.25764415},{''id''=>''Sfx4::Local::AzTitle
+        9304'',''object_id_ss''=>''1000000000330344'',''title_display_ss''=>''Petroleum
+        economist'',''issn_ss''=>''0306-4743'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.22312637},{''id''=>''Sfx4::Local::AzTitle
+        14249'',''object_id_ss''=>''1000000000277402'',''title_display_ss''=>''Country
+        profile. Chad'',''issn_ss''=>''1741-0185'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.18218192},{''id''=>''Sfx4::Local::AzTitle
+        3510'',''object_id_ss''=>''110978979430838'',''title_display_ss''=>''Country
+        profile. Algeria'',''issn_ss''=>''0269-6053'',''isbn_ss''=>'''',''lccn_ss''=>''87656832'',''score''=>0.13663644},{''id''=>''Sfx4::Local::AzTitle
+        3768'',''object_id_ss''=>''991042731883370'',''title_display_ss''=>''Country
+        profile. Ethiopia, Eritrea, Somalia, Djibouti'',''issn_ss''=>''1352-2957'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.13663644},{''id''=>''Sfx4::Local::AzTitle
+        19318'',''object_id_ss''=>''110978979430798'',''title_display_ss''=>''Country
+        profile. Iraq'',''issn_ss''=>''0269-4395'',''isbn_ss''=>'''',''lccn_ss''=>''88659995'',''score''=>0.13663644},{''id''=>''Sfx4::Local::AzTitle
+        10297'',''object_id_ss''=>''111032387031024'',''title_display_ss''=>''Country
+        profile. Israel, Palestinian Territories'',''issn_ss''=>''1474-8347'',''isbn_ss''=>'''',''lccn_ss''=>''2001233910'',''score''=>0.13663644},{''id''=>''Sfx4::Local::AzTitle
+        11483'',''object_id_ss''=>''110978979430796'',''title_display_ss''=>''Country
+        profile. Zimbabwe'',''issn_ss''=>''0269-4360'',''isbn_ss''=>'''',''lccn_ss''=>''86645139'',''score''=>0.13663644},{''id''=>''Sfx4::Local::AzTitle
+        2546'',''object_id_ss''=>''1000000000390478'',''title_display_ss''=>''China
+        economist'',''issn_ss''=>''1673-8837'',''isbn_ss''=>'''',''lccn_ss''=>''2007261121'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        18521'',''object_id_ss''=>''963018067648'',''title_display_ss''=>''Country
+        profile. Belgium, Luxembourg'',''issn_ss''=>''0269-4352'',''isbn_ss''=>'''',''lccn_ss''=>''86645294'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        18488'',''object_id_ss''=>''963018070666'',''title_display_ss''=>''Country
+        profile. France'',''issn_ss''=>''0269-5340'',''isbn_ss''=>'''',''lccn_ss''=>''88648654'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        9322'',''object_id_ss''=>''110978979430852'',''title_display_ss''=>''Country
+        profile. Gabon, Equatorial Guinea'',''issn_ss''=>''0269-6371'',''isbn_ss''=>'''',''lccn_ss''=>''87656582'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        9080'',''object_id_ss''=>''991042729541820'',''title_display_ss''=>''Country
+        profile. Guyana, Barbados, Windward & Leeward Islands'',''issn_ss''=>''0269-8110'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        17678'',''object_id_ss''=>''963018075690'',''title_display_ss''=>''Country
+        profile. Hungary'',''issn_ss''=>''0269-6061'',''isbn_ss''=>'''',''lccn_ss''=>''86646200'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        7415'',''object_id_ss''=>''110978984253250'',''title_display_ss''=>''Country
+        profile. Kyrgyz Republic, Tajikistan, Turkmenistan'',''issn_ss''=>''1366-4263'',''isbn_ss''=>'''',''lccn_ss''=>''99100463'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        6718'',''object_id_ss''=>''954921428679'',''title_display_ss''=>''Country
+        profile. South Korea, North Korea'',''issn_ss''=>''1351-4431'',''isbn_ss''=>'''',''lccn_ss''=>''93657665'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        19981'',''object_id_ss''=>''963018075686'',''title_display_ss''=>''Country
+        profile. Spain'',''issn_ss''=>''0269-5995'',''isbn_ss''=>'''',''lccn_ss''=>''86645895'',''score''=>0.11386371},{''id''=>''Sfx4::Local::AzTitle
+        11437'',''object_id_ss''=>''963018079708'',''title_display_ss''=>''Country
+        profile. United Kingdom'',''issn_ss''=>''0269-798X'',''isbn_ss''=>'''',''lccn_ss''=>''87656557'',''score''=>0.11386371}]}}
+
+'
     http_version: 
-  recorded_at: Fri, 06 Sep 2013 17:25:32 GMT
-recorded_with: VCR 2.4.0
+  recorded_at: Mon, 30 Jun 2014 19:51:38 GMT
+recorded_with: VCR 2.9.2
