--- a/test/vcr_cassettes/sfx4solr_title_exact_search.yml
+++ b/test/vcr_cassettes/sfx4solr_title_exact_search.yml
@@ -1,32 +1,36 @@
---- 
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: post
-    uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
-    body: 
+    uri: http://solr.library.edu/select?wt=ruby
+    body:
       encoding: US-ASCII
-      string: fq=type%3ASfx4%5C%3A%5C%3ANs%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORKER&fl=%2A+score&qf=title_text&defType=dismax&pf=title_text%5E2.0&bq=title_exact_sm%3ANEW%5C+YORKER%5E10.0&ps=0&start=0&rows=20
-    headers: 
-      Content-Type: 
+      string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORKER&fl=%2A+score&qf=title_text&defType=edismax&pf=title_text%5E2.0&bq=title_exact_sm%3ANEW%5C+YORKER%5E10.0&ps=0&start=0&rows=20
+    headers:
+      Content-Type:
       - application/x-www-form-urlencoded; charset=UTF-8
-  response: 
-    status: 
+  response:
+    status:
       code: 200
       message: OK
-    headers: 
-      Server: 
+    headers:
+      Server:
       - Apache-Coyote/1.1
-      Content-Type: 
+      Content-Type:
       - text/plain;charset=UTF-8
-      Transfer-Encoding: 
+      Transfer-Encoding:
       - chunked
-      Date: 
-      - Fri, 06 Sep 2013 17:25:32 GMT
-      Connection: 
+      Date:
+      - Mon, 30 Jun 2014 19:56:56 GMT
+      Connection:
       - close
-    body: 
-      encoding: ASCII-8BIT
-      string: "{'responseHeader'=>{'status'=>0,'QTime'=>1,'params'=>{'sort'=>'score desc, title_sort_s asc','qf'=>'title_text','wt'=>'ruby','defType'=>'dismax','rows'=>'20','pf'=>'title_text^2.0','fl'=>'* score','bq'=>'title_exact_sm:NEW\\\\ YORKER^10.0','start'=>'0','q'=>'NEW YORKER','fq'=>'type:Sfx4\\\\:\\\\:Ns\\\\:\\\\:AzTitle','ps'=>'0'}},'response'=>{'numFound'=>5,'start'=>0,'maxScore'=>14.527717,'docs'=>[{'id'=>'Sfx4::Ns::AzTitle 45042','object_id_ss'=>'1000000000237705','title_display_ss'=>'The New - Yorker (1836-1841)','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>14.527717},{'id'=>'Sfx4::Ns::AzTitle 28865','object_id_ss'=>'110975413975944','title_display_ss'=>'The New Yorker','issn_ss'=>'0028-792X','isbn_ss'=>'','lccn_ss'=>'2011201780','score'=>14.306714},{'id'=>'Sfx4::Ns::AzTitle 13414','object_id_ss'=>'3170000000048826','title_display_ss'=>'Moore\\'s Rural New Yorker','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>2.513698},{'id'=>'Sfx4::Ns::AzTitle 71279','object_id_ss'=>'3170000000048938','title_display_ss'=>'New Yorker Musik Zeitung','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>2.513698},{'id'=>'Sfx4::Ns::AzTitle 81616','object_id_ss'=>'2550000000093256','title_display_ss'=>'Northern New Yorker and Saratoga Farmer','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>2.513698}]}}"
+    body:
+      encoding: US-ASCII
+      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>1,''params''=>{''pf''=>''title_text^2.0'',''bq''=>''title_exact_sm:NEW\\
+        YORKER^10.0'',''fl''=>''* score'',''sort''=>''score desc, title_sort_s asc'',''start''=>''0'',''q''=>''NEW
+        YORKER'',''qf''=>''title_text'',''wt''=>''ruby'',''fq''=>''type:Sfx4\\:\\:Local\\:\\:AzTitle'',''rows''=>''20'',''ps''=>''0'',''defType''=>''edismax''}},''response''=>{''numFound''=>0,''start''=>0,''maxScore''=>0.0,''docs''=>[]}}
+
+'
     http_version: 
-  recorded_at: Fri, 06 Sep 2013 17:25:32 GMT
-recorded_with: VCR 2.4.0
+  recorded_at: Mon, 30 Jun 2014 19:56:57 GMT
+recorded_with: VCR 2.9.2
